--- a/product_detail.html
+++ b/product_detail.html
@@ -138,20 +138,18 @@
         <!-- <p class="category-name" style="margin-top: 10px; color: #1b8bcb; font-size: 14px;"><a href="" style="text-decoration: none;"><span style="font-weight: normal; color: gray;">Trang chủ / Sách /</span> Sapiens-lược sử loài người</p></a> -->
     </div>
 
-    <div class="container product-detail-container cart-container">
+   <div class="container product-detail-container cart-container">
         <div class="product-detail-box">
             <div class="pd-main-info">
-                <img src="books/big-magic_ElizabethGilbert_250.jpg"
+                <img src="books/lap-trinh-android-le-hoang-son.jpg"
                     style="width: 200px; height: 300px; object-fit: cover ;border: 1px solid #cdcdcd;"></img>
                 <div class="main-info">
-                    <div id="title">Big Magic</div>
+                    <div id="title">Lập trình Android</div>
                     <div id="price">250.000 đ</div>
                     <div class="description">
-                        <b>Tác giả:</b> Elizabeth <span style="word-spacing: 200px">Gilbert </span> <b>Kích thước:</b>
-                        16cm x 24cm <br>
-                        <b>Nhà xuất bản:</b> Tri <span style="word-spacing: 217px">thức </span> <b>Hình thức bìa:</b>
-                        Bìa Mềm <br>
-                        <b>Nhà phát hành:</b> Alpha Books
+                        <b>Tác giả:  <span class="description_span">Lê Hoàng Sơn </span></b> <b>Kích thước: <span class="description_span">16cm x 24cm</span></b> 
+                        <b>Nhà xuất bản: <span class="description_span">Tri thức </span></b>  <b>Hình thức bìa: <span class="description_span">Bìa Mềm </span></b> 
+                        <b>Nhà phát hành: <span class="description_span">Alpha Books </span></b> 
                     </div>
                     <form action="" id="add-to-cart-form">
                         <div id="count">
@@ -186,18 +184,19 @@
             <div class="pd-all-info" id="extra">
                 <div id="title">Mô tả sản phẩm:</div>
                 <div class="detail-info">
-                    <b>Tên sách:</b>Big Magic <br>
-                    <b>Tác giả:</b> Elizabeth Gilbert <br>
+                    <b>Tên sách:</b>Lập trình Android <br>
+                    <b>Tác giả:</b> Lê Hoàng Sơn <br>
                     <b>Nhà xuất bản:</b> Alpha Books <br>
                     <b>Người dịch:</b> Nguyễn Thủy Cung <br>
                     <b>Năm xuất bản:</b> 2022 <br>
                     <b>Số trang:</b> 550 <br>
-                    <b>Thể loại:</b> Kỹ năng sống <br>
-                    <b>Mô tả ngắn:</b> Câu hỏi lớn và sâu sắc của Harari là: chúng ta thực sự muốn gì? Có cách nào để
-                    đạt được hạnh phúc
-                    cho con người chúng ta, hoặc thậm chí liệu chúng ta có biết được nó là gì hay không? Trong cốt lõi
-                    của nó,
-                    Sapiens biện luận rằng chúng ta không biết về bản thân chúng ta, huống chi biết được những...
+                    <b>Thể loại:</b> Công nghệ <br>
+                    <b>Mô tả ngắn:</b> Mục tiêu chính của cuốn sách này là giúp bạn đọc nhanh chóng nắm bắt được các thành phần cốt yếu
+                     trong Android và có thể lập trình được các ứng dụng cơ bản một cách hiệu quả. Đây cũng sẽ là cuốn giáo trình hữu 
+                     ích cho sinh viên các trường đại học kỹ thuật chuyên về công nghệ thông tin. Để có thể đọc một cách hiệu quả nội 
+                     dung của cuốn sách này, bạn đọc cần nắm được các kiến thức nền tảng về lập trình hướng đối tượng trong Java. Trong 
+                     mỗi chương, chúng tôi cũng trình bày các đoạn mã nguồn đầy đủ để bạn đọc tiện theo dõi và thực hành. Nội dung của 
+                     cuốn sách gồm 6 chương.
                 </div>
             </div>
 
@@ -296,11 +295,11 @@
             <div class="recommend-books">
                 <div class="product-item">
                     <a href="">
-                        <img src="./books/ke-toan-via-he_DarrellMullis-JudithOrloff-179.jpg" alt="">
-                        <a href="" class="book-title">Kế Toán Vỉa Hè</a>
+                        <img src="./books/cong-nghiep-tuong-lai-alec-ross.jpg" alt="">
+                        <a href="" class="book-title">Công nghiệp tương lai</a>
                     </a>
 
-                    <p class="book-author">Darrell Mullis</p>
+                    <p class="book-author">Alec Ross</p>
                     <div>
                         <a href="#" class="current-price">179.000đ</a>
                         <p class="old-price">225.000đ</p>
@@ -308,11 +307,11 @@
                 </div>
                 <div class="product-item">
                     <a href="">
-                        <img src="./books//thao-tung-tam-ly_Shannon-Thomas-LCSW_117.jpg" alt="">
-                        <a href="" class="book-title">Sapiens - Lược sử loài người</a>
+                        <img src="./books/lap-trinh-va-cuoc-song-jeff-atwood.jpg" alt="">
+                        <a href="" class="book-title">Lập trình và cuộc sống</a>
                     </a>
 
-                    <p class="book-author">Elizabeth Gilbert</p>
+                    <p class="book-author">Jeff Atwood</p>
                     <div>
                         <a href="#" class="current-price">125.000đ</a>
                         <p class="old-price">199.000đ</p>
@@ -320,11 +319,11 @@
                 </div>
                 <div class="product-item hidden1">
                     <a href="">
-                        <img src="./books/heaven_Mieko-Kawakami_269.jpg" alt="">
-                        <a href="" class="book-title">Sapiens - Lược sử loài người</a>
+                        <img src="./books/computer-made-easy-james-bernstein.png" alt="">
+                        <a href="" class="book-title">Computer made easy</a>
                     </a>
 
-                    <p class="book-author">Elizabeth Gilbert</p>
+                    <p class="book-author">James Bernstein</p>
                     <div>
                         <a href="#" class="current-price">125.000đ</a>
                         <p class="old-price">199.000đ</p>
@@ -332,11 +331,11 @@
                 </div>
                 <div class="product-item hidden1">
                     <a href="">
-                        <img src="./books/nghigiaulamgiau_Napoleon-Hill_110.jpg" alt="">
-                        <a href="" class="book-title">Big magic</a>
+                        <img src="./books/sach-cong-nghe-thiet-ke-website.jpg" alt="">
+                        <a href="" class="book-title">Công nghệ thiết kế website</a>
                     </a>
 
-                    <p class="book-author">Elizabeth Gilbert</p>
+                    <p class="book-author">Water PC</p>
                     <div>
                         <a href="#" class="current-price">125.000đ</a>
                         <p class="old-price">199.000đ</p>
@@ -344,11 +343,11 @@
                 </div>
                 <div class="product-item hidden2">
                     <a href="">
-                        <img src="./books/nghe_thuat_dam_phan-Donald-Trump_300.jpg" alt="">
-                        <a href="" class="book-title">D. Trump - Nghệ thuật đàm phán</a>
+                        <img src="./books/sach-cong-nghe-cloud.jpg" alt="">
+                        <a href="" class="book-title">Điện toán đám mây</a>
                     </a>
 
-                    <p class="book-author">Donald J Trump, Tony Schartz</p>
+                    <p class="book-author">Huỳnh Quyết Thắng</p>
                     <div>
                         <a href="#" class="current-price">125.000đ</a>
                         <p class="old-price">199.000đ</p>
@@ -357,7 +356,7 @@
             </div>
         </div>
     </div>
-
+    
     <div class="position-fixed top-0 end-0 p-3" style="z-index: 11">
         <div id="add-cart-succ-toast" class="toast hide" role="alert" aria-live="assertive" aria-atomic="true">
             <div class="toast-header">
