--- a/cart.html
+++ b/cart.html
@@ -648,12 +648,13 @@
             </li>
             <li>
               <img src="./assets/location.svg" class="contact-icon" alt="" />
-              <a href=""
-                >Tầng số 28, Landmark 81, 208 Nguyễn Hữu Cảnh, phường 22, quận
-                Bình Thạnh, Tp. Hồ Chí Minh, Việt Nam.</a
+              <a
+                href="https://www.google.com/maps/place/Linh+Trung,+Th%E1%BB%A7+%C4%90%E1%BB%A9c,+Th%C3%A0nh+ph%E1%BB%91+H%E1%BB%93+Ch%C3%AD+Minh,+Vi%E1%BB%87t+Nam/@10.8621084,106.7636379,14z/data=!3m1!4b1!4m6!3m5!1s0x3174d88215693361:0x95009cc1803a7e51!8m2!3d10.8637312!4d106.7794935!16s%2Fg%2F1hb_h4f2t?entry=ttu"
+                >Phường Linh Trung, Thủ Đức, Thành phố Hồ Chí Minh, Việt Namm</a
               >
             </li>
           </ul>
+
           <div class="social-contact">
             <a href="https://www.facebook.com/" target="_blank">
               <img src="./assets/facebook.svg" alt="" />
