--- a/product_detail.html
+++ b/product_detail.html
@@ -86,8 +86,6 @@
             <ul class="navbar">
                 <li class="menu-item"><a href="index.html"> Trang chủ </a></li>
                 <li class="menu-item current-page"><a href="books.html"> Sách </a></li>
-                <!-- <li class="menu-item"><a href="magazine.html"> Tạp chí </a></li>
-                <li class="menu-item"><a href="textbooks.html"> Sách giáo khoa </a></li> -->
                 <li class="menu-item"><a href="all_news.html"> Bài viết </a></li>
                 <li class="menu-item"><a href="recommended.html"> Đề xuất </a></li>
                 <li class="menu-item"><a href="sale.html"> Sale </a></li>
@@ -96,9 +94,7 @@
         <div class="nav-menu-wrapper">
             <ul class="navbar">
                 <li class="menu-item"><a href="index.html"> Trang chủ </a></li>
-                <li class="menu-item current-page"><a href="books.html"> Sách </a></li>
-                <!-- <li class="menu-item"><a href="magazine.html"> Tạp chí </a></li>
-                <li class="menu-item"><a href="textbooks.html"> Sách giáo khoa </a></li> -->
+                <li class="menu-item current-page"><a href="books.html"> Sách </a></li> -->
                 <li class="menu-item"><a href="all_news.html"> Bài viết </a></li>
                 <li class="menu-item"><a href="recommended.html"> Đề xuất </a></li>
                 <li class="menu-item"><a href="sale.html"> Sale </a></li>
@@ -122,8 +118,6 @@
             <ul class="list-group">
                 <li class="list-group-item "><a href="index.html">Trang chủ</a></li>
                 <li class="list-group-item current-page"><a href="books.html">Sách</a></li>
-                <!-- <li class="list-group-item"><a href="magazine.html">Tạp chí</a></li>
-                <li class="list-group-item"><a href="textbooks.html">Sách giáo khoa</a></li> -->
                 <li class="list-group-item"><a href="all_news.html">Bài viết</a></li>
                 <li class="list-group-item"><a href="recommended.html">Đề xuất</a></li>
                 <li class="list-group-item"><a href="sale.html">Sale</a></li>
@@ -134,22 +128,22 @@
     <div class="product-path container">
         <a href="index.html">Trang chủ /</a>
         <a href="books.html">Sách /</a>
-        <a href="#" class="book-name-path">Sapiens - Lược sử loài người</a>
+        <a href="#" class="book-name-path">Gián điệp mạng</a>
         <!-- <p class="category-name" style="margin-top: 10px; color: #1b8bcb; font-size: 14px;"><a href="" style="text-decoration: none;"><span style="font-weight: normal; color: gray;">Trang chủ / Sách /</span> Sapiens-lược sử loài người</p></a> -->
     </div>
 
     <div class="container product-detail-container cart-container">
         <div class="product-detail-box">
             <div class="pd-main-info">
-                <img src="books/big-magic_ElizabethGilbert_250.jpg"
+                <img src="books/gian-diep-mang-clifford-stoll.jpg"
                     style="width: 200px; height: 300px; object-fit: cover ;border: 1px solid #cdcdcd;"></img>
                 <div class="main-info">
-                    <div id="title">Big Magic</div>
-                    <div id="price">250.000 đ</div>
+                    <div id="title">Gián điệp mạng</div>
+                    <div id="price">150.000 đ</div>
                     <div class="description">
-                        <b>Tác giả:</b> Elizabeth <span style="word-spacing: 200px">Gilbert </span> <b>Kích thước:</b>
+                        <b>Tác giả:</b> Clifford <span style="word-spacing: 200px">Stoll </span> <b>Kích thước:</b>
                         16cm x 24cm <br>
-                        <b>Nhà xuất bản:</b> Tri <span style="word-spacing: 217px">thức </span> <b>Hình thức bìa:</b>
+                        <b>Nhà xuất bản:</b> Công <span style="word-spacing: 140px">Thương </span> <b>Hình thức bìa:</b>
                         Bìa Mềm <br>
                         <b>Nhà phát hành:</b> Alpha Books
                     </div>
@@ -186,18 +180,14 @@
             <div class="pd-all-info" id="extra">
                 <div id="title">Mô tả sản phẩm:</div>
                 <div class="detail-info">
-                    <b>Tên sách:</b>Big Magic <br>
-                    <b>Tác giả:</b> Elizabeth Gilbert <br>
+                    <b>Tên sách:</b>Gián điệp mạng <br>
+                    <b>Tác giả:</b> Clifford Stoll <br>
                     <b>Nhà xuất bản:</b> Alpha Books <br>
-                    <b>Người dịch:</b> Nguyễn Thủy Cung <br>
-                    <b>Năm xuất bản:</b> 2022 <br>
-                    <b>Số trang:</b> 550 <br>
-                    <b>Thể loại:</b> Kỹ năng sống <br>
-                    <b>Mô tả ngắn:</b> Câu hỏi lớn và sâu sắc của Harari là: chúng ta thực sự muốn gì? Có cách nào để
-                    đạt được hạnh phúc
-                    cho con người chúng ta, hoặc thậm chí liệu chúng ta có biết được nó là gì hay không? Trong cốt lõi
-                    của nó,
-                    Sapiens biện luận rằng chúng ta không biết về bản thân chúng ta, huống chi biết được những...
+                    <b>Người dịch:</b> Lê Vũ Kỳ Nam <br>
+                    <b>Năm xuất bản:</b> 2018 <br>
+                    <b>Số trang:</b> 516 <br>
+                    <b>Thể loại:</b> Công nghệ thông tin <br>
+                    <b>Mô tả ngắn:</b> Cuốn sách là câu chuyện người thực việc thực (tác giả cũng là nhân vật chính) kể về cuộc săn đuổi hacker bất đắc dĩ của một nhà khoa học chuyển tay ngang trở thành nhà quản lý hệ thống mạng máy tính ở Phòng Thí nghiệm Lawrence Berkeley, California, Mỹ.
                 </div>
             </div>
 
@@ -296,26 +286,26 @@
             <div class="recommend-books">
                 <div class="product-item">
                     <a href="">
-                        <img src="./books/ke-toan-via-he_DarrellMullis-JudithOrloff-179.jpg" alt="">
-                        <a href="" class="book-title">Kế Toán Vỉa Hè</a>
+                        <img src="./books/lieu-it-da-het-thoi-nicholas-g.-carr.jpg" alt="">
+                        <a href="" class="book-title">Liệu IT đã hết thời</a>
                     </a>
 
-                    <p class="book-author">Darrell Mullis</p>
+                    <p class="book-author">Nicholas G Carr</p>
                     <div>
-                        <a href="#" class="current-price">179.000đ</a>
-                        <p class="old-price">225.000đ</p>
+                        <a href="#" class="current-price">116.000đ</a>
+                        <p class="old-price">125.000đ</p>
                     </div>
                 </div>
                 <div class="product-item">
                     <a href="">
-                        <img src="./books//thao-tung-tam-ly_Shannon-Thomas-LCSW_117.jpg" alt="">
-                        <a href="" class="book-title">Sapiens - Lược sử loài người</a>
+                        <img src="./books/cong-nghiep-tuong-lai-alec-ross.jpg" alt="">
+                        <a href="" class="book-title">Công nghiệp tương lai</a>
                     </a>
 
-                    <p class="book-author">Elizabeth Gilbert</p>
+                    <p class="book-author">Alec Ross</p>
                     <div>
-                        <a href="#" class="current-price">125.000đ</a>
-                        <p class="old-price">199.000đ</p>
+                        <a href="#" class="current-price">90.000đ</a>
+                        <p class="old-price">129.000đ</p>
                     </div>
                 </div>
                 <div class="product-item hidden1">
