--- a/sale.html
+++ b/sale.html
@@ -224,8 +224,13 @@
         <div class="product-item">
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">50% OFF</span>
-            <img src="./books/combo-sach-cong-nghe-ky-thuat-lap-trinh-C_C++.jpg" alt="" />
-            <a href="product_detail.html" class="book-title">COMBO sách lập trình C_C++</a>
+            <img
+              src="./books/combo-sach-cong-nghe-ky-thuat-lap-trinh-C_C++.jpg"
+              alt=""
+            />
+            <a href="product_detail.html" class="book-title"
+              >COMBO sách lập trình C_C++</a
+            >
           </a>
           <p class="book-author">5TechUIT</p>
           <div>
@@ -236,8 +241,10 @@
         <div class="product-item">
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">50% OFF</span>
-            <img src="./books/combo-sach-cong-nghe-thong-tin.jpg" alt=""/>
-            <a href="product_detail.html" class="book-title">COMBO sách công nghệ thông tin</a>
+            <img src="./books/combo-sach-cong-nghe-thong-tin.jpg" alt="" />
+            <a href="product_detail.html" class="book-title"
+              >COMBO sách công nghệ thông tin</a
+            >
           </a>
           <p class="book-author">5TechUIT</p>
           <div>
@@ -249,7 +256,9 @@
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
             <img src="./books/sach-cong-nghe-cloud.jpg" alt="" />
-            <a href="product_detail.html" class="book-title">Sách công nghệ điện toán đám mây</a>
+            <a href="product_detail.html" class="book-title"
+              >Sách công nghệ điện toán đám mây</a
+            >
           </a>
           <p class="book-author">Huỳnh Quyết Thắng</p>
           <div>
@@ -260,8 +269,10 @@
         <div class="product-item">
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
-            <img src="./books/sach-cong-nghe-IOT.jpg" alt=""/>
-            <a href="product_detail.html" class="book-title">Sách công nghệ IOT</a>
+            <img src="./books/sach-cong-nghe-IOT.jpg" alt="" />
+            <a href="product_detail.html" class="book-title"
+              >Sách công nghệ IOT</a
+            >
           </a>
           <p class="book-author">Lê Trung Quân</p>
           <div>
@@ -272,11 +283,10 @@
         <div class="product-item">
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
-            <img
-              src="./books/sach-cong-nghe-mang.jpg"
-              alt=""
-            />
-            <a href="product_detail.html" class="book-title">Sách công nghệ mạng Internet</a>
+            <img src="./books/sach-cong-nghe-mang.jpg" alt="" />
+            <a href="product_detail.html" class="book-title"
+              >Sách công nghệ mạng Internet</a
+            >
           </a>
           <p class="book-author">TS.Phạm Huy Hoàng</p>
           <div>
@@ -287,11 +297,10 @@
         <div class="product-item">
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
-            <img
-              src="./books/sach-cong-nghe-phan-mem.jpg"
-              alt=""
-            />
-            <a href="product_detail.html" class="book-title">Sách công nghệ phần mềm</a>
+            <img src="./books/sach-cong-nghe-phan-mem.jpg" alt="" />
+            <a href="product_detail.html" class="book-title"
+              >Sách công nghệ phần mềm</a
+            >
           </a>
           <p class="book-author">TS.Dương Hữu Thành</p>
           <div>
@@ -306,7 +315,23 @@
               src="./books/sach-cong-nghe-phat-trien-ung-dung-di-dong.jpg"
               alt=""
             />
-            <a href="product_detail.html" class="book-title">Sách công nghệ phát triển App</a>
+            <a href="product_detail.html" class="book-title"
+              >Sách công nghệ phát triển App</a
+            >
+          </a>
+          <p class="book-author">UIT</p>
+          <div>
+            <a href="product_detail.html" class="current-price">125.000đ</a>
+            <p class="old-price">199.000đ</p>
+          </div>
+        </div>
+        <div class="product-item">
+          <a class="prod-img-title" href="product_detail.html">
+            <span class="sale-num">20% OFF</span>
+            <img src="./books/sach-cong-nghe-thiet-ke-website.jpg" alt="" />
+            <a href="product_detail.html" class="book-title"
+              >Sách công nghệ Web</a
+            >
           </a>
           <p class="book-author">UIT</p>
           <div>
@@ -318,22 +343,12 @@
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
             <img
-              src="./books/sach-cong-nghe-thiet-ke-website.jpg"
+              src="./books/sach-cong-nghe-thong-tin-dien-tu-vien-thong.jpg"
               alt=""
             />
-            <a href="product_detail.html" class="book-title">Sách công nghệ Web</a>
-          </a>
-          <p class="book-author">UIT</p>
-          <div>
-            <a href="product_detail.html" class="current-price">125.000đ</a>
-            <p class="old-price">199.000đ</p>
-          </div>
-        </div>
-        <div class="product-item">
-          <a class="prod-img-title" href="product_detail.html">
-            <span class="sale-num">20% OFF</span>
-            <img src="./books/sach-cong-nghe-thong-tin-dien-tu-vien-thong.jpg" alt="" />
-            <a href="product_detail.html" class="book-title">Sách công nghệ thông tin DTVT</a>
+            <a href="product_detail.html" class="book-title"
+              >Sách công nghệ thông tin DTVT</a
+            >
           </a>
           <p class="book-author">Dân Trí</p>
           <div>
@@ -344,8 +359,10 @@
         <div class="product-item">
           <a class="prod-img-title" href="product_detail.html">
             <span class="sale-num">20% OFF</span>
-            <img src="./books/sach-cong-nghe-thong-tin-trong-TMĐT.jpg" alt="" />
-            <a href="product_detail.html" class="book-title">Sách công nghệ thông tin TMDT</a>
+            <img src="./books/sachcongnghe.jpg" alt="" />
+            <a href="product_detail.html" class="book-title"
+              >Sách công nghệ thông tin TMDT</a
+            >
           </a>
           <p class="book-author">Nguyễn Đình Thuân</p>
           <div>
@@ -353,7 +370,6 @@
             <p class="old-price">199.000đ</p>
           </div>
         </div>
-        
       </div>
     </div>
 
@@ -444,9 +460,9 @@
             </li>
             <li>
               <img src="./assets/location.svg" class="contact-icon" alt="" />
-              <a href=""
-                >Tầng số 28, Landmark 81, 208 Nguyễn Hữu Cảnh, phường 22, quận
-                Bình Thạnh, Tp. Hồ Chí Minh, Việt Nam.</a
+              <a
+                href="https://www.google.com/maps/place/Linh+Trung,+Th%E1%BB%A7+%C4%90%E1%BB%A9c,+Th%C3%A0nh+ph%E1%BB%91+H%E1%BB%93+Ch%C3%AD+Minh,+Vi%E1%BB%87t+Nam/@10.8621084,106.7636379,14z/data=!3m1!4b1!4m6!3m5!1s0x3174d88215693361:0x95009cc1803a7e51!8m2!3d10.8637312!4d106.7794935!16s%2Fg%2F1hb_h4f2t?entry=ttu"
+                >Phường Linh Trung, Thủ Đức, Thành phố Hồ Chí Minh, Việt Namm</a
               >
             </li>
           </ul>
