--- a/payment_success.html
+++ b/payment_success.html
@@ -221,9 +221,9 @@
       <div class="order-container col-xl-6 col-md-8 col-12">
         <div class="col-12 order-info-container">
           <p class="ord-con-left">Ngày đặt hàng</p>
-          <p class="ord-con-right">07/12/2023</p>
+          <p class="ord-con-right">31/03/2024</p>
           <p class="ord-con-left">Khách hàng</p>
-          <p class="ord-con-right">Dao Nam Thuan</p>
+          <p class="ord-con-right">Nguyen Cam Ly</p>
           <p class="ord-con-left">Phương thức thanh toán</p>
           <p class="ord-con-right">Thanh toán bằng tiền mặt</p>
           <hr style="margin: 10px 0px" />
@@ -231,24 +231,24 @@
           <p class="ord-con-left">Mã hóa đơn</p>
           <p class="ord-con-right">12345678</p>
           <p class="ord-con-left">Tổng thanh toán</p>
-          <p class="ord-con-right">880.000đ</p>
+          <p class="ord-con-right">356.000đ</p>
         </div>
         <div class="col-12 order-product-container">
           <div class="ord-product">
             <div class="ord-product-left">
               <img
                 class="ord-product-img"
-                src="./books/sapiens-luoc-su-loai-nguoi_Ova-Rihana-235.jpg"
+                src="./books/gian-diep-mang-clifford-stoll.jpg"
                 alt=""
               />
               <div class="ord-product-info">
-                <p class="ord-product-name">Sapiens - Lược sử loài người</p>
-                <p class="ord-product-author">Yuval Noah Harari</p>
+                <p class="ord-product-name">Gián điệp mạng</p>
+                <p class="ord-product-author">Clifford Stoll</p>
                 <p class="ord-product-quantity">Số lượng: 1</p>
               </div>
             </div>
             <div>
-              <p class="ord-product-price">250.000đ</p>
+              <p class="ord-product-price">150.000đ</p>
             </div>
           </div>
 
@@ -256,17 +256,19 @@
             <div class="ord-product-left">
               <img
                 class="ord-product-img"
-                src="./books/big-magic_ElizabethGilbert_250.jpg"
+                src="./books/lieu-it-da-het-thoi-nicholas-g.-carr.jpg"
                 alt=""
               />
               <div class="ord-product-info">
-                <p class="ord-product-name">Big Magic</p>
-                <p class="ord-product-author">Elizabeth Gilbert</p>
+                <p class="ord-product-name">Liệu IT đã hết thời</p>
+                <p class="ord-product-author">
+                  Liệu IT đã hết thời Nicholas G Carr
+                </p>
                 <p class="ord-product-quantity">Số lượng: 1</p>
               </div>
             </div>
             <div>
-              <p class="ord-product-price">125.000đ</p>
+              <p class="ord-product-price">116.000đ</p>
             </div>
           </div>
 
@@ -274,17 +276,17 @@
             <div class="ord-product-left">
               <img
                 class="ord-product-img"
-                src="./books/tam-ly-hoc-toi-pham_Thomas-Harris_285.jpg"
+                src="./books/cong-nghiep-tuong-lai-alec-ross.jpg"
                 alt=""
               />
               <div class="ord-product-info">
-                <p class="ord-product-name">Tâm lý học tội phạm</p>
-                <p class="ord-product-author">Elizabeth Gilbert</p>
+                <p class="ord-product-name">Công nghiệp tương lai</p>
+                <p class="ord-product-author">Alec Ross</p>
                 <p class="ord-product-quantity">Số lượng: 1</p>
               </div>
             </div>
             <div>
-              <p class="ord-product-price">99.000đ</p>
+              <p class="ord-product-price">90.000đ</p>
             </div>
           </div>
         </div>
