Fix: add meta tag

--- a/all_news.html
+++ b/all_news.html
@@ -3,6 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Khám phá những bài viết mới nhất về công nghệ, lập trình, thiết kế và nhiều chủ đề hấp dẫn khác tại 5TechUIT. Tại đây cung cấp những thông tin, hướng dẫn và những ý tưởng sáng tạo để bạn có thể phát triển kỹ năng và kiến thức trong lĩnh vực công nghệ thông tin. Hãy tham gia cùng 5TechUIT để tìm hiểu thêm về các xu hướng mới nhất và chia sẻ kinh nghiệm của bạn với cộng đồng!"
+    />
+
+    <!-- Chinh sua cac bai viet sau do them tu khoa len day -->
+    <meta
+      name="keywords"
+      content="5TechUIT, Nhà sách 5TechUIT, 5TechUIT - nhà sách công nghệ sinh viên, Nhà sách công nghệ sinh viên, Sách học công nghệ thông tin"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="language" content="vi" />
+    <meta name="content-type" content="text/html; charset=UTF-8" />
+
+    <meta
+      property="og:title"
+      content="5TechUiT - Nhà sách công nghệ cho sinh viên"
+    />
+    <meta
+      property="og:description"
+      content="5TechUIT - Ngôi nhà sách công nghệ hàng đầu dành cho sinh viên, cung cấp hàng ngàn cuốn sách và tài liệu về lĩnh vực Công Nghệ Thông Tin (CNTT). Khám phá thư viện sách điện tử đa dạng và tham gia các sự kiện, workshop để tiếp cận kiến thức mới và giao lưu với các chuyên gia hàng đầu trong ngành"
+    />
+    <meta
+      property="og:image"
+      content="https://www.facebook.com/photo?fbid=122106852944254995&set=a.122106852992254995"
+    />
+    <meta
+      property="og:url"
+      content="https://www.facebook.com/profile.php?id=61557649870534"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="vi_VN" />
+    <meta property="og:site_name" content="5TechUIT" />
+
     <title>5TechUIT | Bài viết</title>
     <link
       rel="apple-touch-icon"
