--- a/index.html
+++ b/index.html
@@ -1,8 +1,40 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="5TechUIT - Ngôi nhà sách công nghệ hàng đầu dành cho sinh viên, cung cấp hàng ngàn cuốn sách và tài liệu về lĩnh vực Công Nghệ Thông Tin (CNTT). Khám phá thư viện sách điện tử đa dạng và tham gia các sự kiện, workshop để tiếp cận kiến thức mới và giao lưu với các chuyên gia hàng đầu trong ngành"
+    />
+    <meta
+      name="keywords"
+      content="5TechUIT, Nhà sách 5TechUIT, 5TechUIT - Nhà sách công nghệ sinh viên, Nhà sách công nghệ sinh viên, Sách học công nghệ thông tin"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="language" content="vi" />
+    <meta name="content-type" content="text/html; charset=UTF-8" />
+
+    <meta
+      property="og:title"
+      content="5TechUiT - Nhà sách công nghệ cho sinh viên"
+    />
+    <meta
+      property="og:description"
+      content="5TechUIT - Ngôi nhà sách công nghệ hàng đầu dành cho sinh viên, cung cấp hàng ngàn cuốn sách và tài liệu về lĩnh vực Công Nghệ Thông Tin (CNTT). Khám phá thư viện sách điện tử đa dạng và tham gia các sự kiện, workshop để tiếp cận kiến thức mới và giao lưu với các chuyên gia hàng đầu trong ngành"
+    />
+    <meta
+      property="og:image"
+      content="https://www.facebook.com/photo?fbid=122106852944254995&set=a.122106852992254995"
+    />
+    <meta
+      property="og:url"
+      content="https://www.facebook.com/profile.php?id=61557649870534"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="vi_VN" />
+    <meta property="og:site_name" content="5TechUIT" />
+
     <title>5TechUIT</title>
     <link
       rel="icon"
@@ -1160,7 +1192,10 @@
             </li>
           </ul>
           <div class="social-contact">
-            <a href="https://www.facebook.com/" target="_blank">
+            <a
+              href="https://www.facebook.com/profile.php?id=61557649870534"
+              target="_blank"
+            >
               <img src="./assets/facebook.svg" alt="" />
             </a>
             <a href="https://www.youtube.com/" target="_blank">
