--- a/sale.html
+++ b/sale.html
@@ -3,6 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Khám phá ngay bộ sưu tập các cuốn sách đang giảm giá tại 5TechUIT - Nhà sách công nghệ cho sinh viên! Tiết kiệm đến 20% cho hàng loạt sách công nghệ. Đừng bỏ lỡ cơ hội, mua sách ngay hôm nay!"
+    />
+
+    <meta
+      name="keywords"
+      content="5TechUIT, Nhà sách 5TechUIT, 5TechUIT - nhà sách công nghệ sinh viên, Nhà sách công nghệ sinh viên, Sách học công nghệ thông tin, Sách công nghệ, Kỹ thuật lập trình, Sách công nghệ mạng Internet, Sách công nghệ IOT, Lập trình Android"
+    />
+    <meta name="robots" content="index,follow" />
+    <meta name="language" content="vi" />
+    <meta name="content-type" content="text/html; charset=UTF-8" />
+
+    <meta
+      property="og:title"
+      content="5TechUiT - Nhà sách công nghệ cho sinh viên"
+    />
+    <meta
+      property="og:description"
+      content="5TechUIT - Ngôi nhà sách công nghệ hàng đầu dành cho sinh viên, cung cấp hàng ngàn cuốn sách và tài liệu về lĩnh vực Công Nghệ Thông Tin (CNTT). Khám phá thư viện sách điện tử đa dạng và tham gia các sự kiện, workshop để tiếp cận kiến thức mới và giao lưu với các chuyên gia hàng đầu trong ngành"
+    />
+    <meta
+      property="og:image"
+      content="https://www.facebook.com/photo?fbid=122106852944254995&set=a.122106852992254995"
+    />
+    <meta
+      property="og:url"
+      content="https://www.facebook.com/profile.php?id=61557649870534"
+    />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="vi_VN" />
+    <meta property="og:site_name" content="5TechUIT" />
     <title>5TechUIT | Sale</title>
     <link
       rel="apple-touch-icon"
