fix: title website

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <meta property="og:locale" content="vi_VN" />
     <meta property="og:site_name" content="5TechUIT" />
 
-    <title>5TechUIT</title>
+    <title>5TechUIT - Nhà sách công nghệ cho sinh viên</title>
     <link
       rel="icon"
       type="image/png"
